cluster/platforms/authentik/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`authentik.${domain_name}`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: authentik-server
      namespace: authentik
      port: 80
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
